--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <h2> LAYOUT DENGAN HTML DAN CSS</h2>
+        <h2> LANDING LAYOUT DENGAN HTML DAN CSS</h2>
     </div>
     <div class="nav">
         <ul>
